--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid px-0">
-                    <a class="navbar-brand" href="#"><img src="./assets/images/logo.svg" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img src="./assets/images/header-logo.svg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -61,10 +61,10 @@
     <div class="history-section">
         <div class="container">
             <div class="row mx-0">
-                <div class="col-md-6 ps-0">
+                <div class="col-lg-6 ps-0">
                     <div class="image"></div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h6>Foundery and History</h6>
                     <h2>The legacy of
                         Mutib Bin Abdulaziz</h2>
@@ -79,10 +79,10 @@
     <div class="history-section focus">
         <div class="container">
             <div class="row mx-0">
-                <div class="col-md-6 ps-0">
+                <div class="col-lg-6">
                     <div class="image"></div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h6>Our Focus</h6>
                     <h2>Active Programs</h2>
                     <p>This section highlights the foundation's tangible contributions. This can include stories of
@@ -96,21 +96,21 @@
         <div class="container">
             <div class="row mx-0">
                 <img src="./assets/images/pattern2.svg" class="img-pattern img-fluid" alt="">
-                <div class="col-md-3 offset-md-3">
+                <div class="col-lg-3 offset-lg-3">
                     <div class="d-flex">
                         <img src="./assets/images/heart.svg" class="img-stat" alt="">
                         <h1 class="figure-1">07</h1>
                         <h6>Milion Donated</h6>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <div class="d-flex">
                         <img src="./assets/images/school.svg" class="img-stat" alt="">
                         <h1 class="figure-1">07</h1>
                         <h6>Schools Built</h6>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3">
                     <div class="d-flex">
                         <img src="./assets/images/tap.svg" class="img-stat" alt="">
                         <h1 class="figure-1">07</h1>
@@ -146,21 +146,21 @@
         </div>
     </div>
     <footer>
-        <div class="container">
-            <div class="row mx-0">
+        <div class="container px-0">
+            <div class="row mx-0 foot-main">
                 <div class="col-md-8">
                     <div class="row mx-0">
                         <div class="col-md-4">
                             <img src="./assets/images/footer-logo.svg" alt="">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <ul>
                                 <li><a class="footer-link" href="">About</a></li>
                                 <li><a class="footer-link" href="">Team</a></li>
                                 <li><a class="footer-link" href="">Focus</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <ul>
                                 <li><a class="footer-link" href="">Founder & History</a></li>
                                 <li><a class="footer-link" href="">Career</a></li>
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 social-links">
                     <ul class="d-flex">
                         <li class="px-3"><a href=""><img src="./assets/images/linkedin.svg" alt=""></a></li>
                         <li class="px-3"><a href=""><img src="./assets/images/instagram.svg" alt=""></a></li>
