--- a/about.html
+++ b/about.html
@@ -11,9 +11,10 @@
 <body>
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid px-0">
-                    <a class="navbar-brand" href="#"><img src="./assets/images/logo.svg" alt="logo"></a>
+                    <a class="navbar-brand" href="/index.html"><img src="./assets/images/header-logo.svg"
+                            alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -58,11 +59,10 @@
     <div class="legacy-section">
         <div class="container">
             <div class="row mx-0">
-                <div class="col-md-6 ps-0">
-                    <p class="text-center me-5">Founder’s Legacy</p>
+                <div class="col-md-4 ps-0">
+                    <p class="text-lg-center me-5">Founder’s Legacy</p>
                 </div>
-                <div class="col-md-6">
-                    <h6>Foundery and History</h6>
+                <div class="col-md-8 ps-0">
                     <h2>The legacy of
                         Mutib Bin Abdulaziz</h2>
                     <p>Lorem ipsum dolor sit amet consectetur. Placerat iaculis nulla feugiat arcu dignissim. Purus
@@ -113,63 +113,128 @@
             </div>
         </div>
     </div>
-
-    <div class="stats-section container">
+    <div class="history-section col_1">
         <div class="container">
+            <div class="text-center mb-5 pb-5">
+                <h6>Our Journey</h6>
+                <h2>The Narative of our Time</h2>
+            </div>
             <div class="row mx-0">
-                <img src="./assets/images/pattern2.svg" class="img-pattern img-fluid" alt="">
-                <div class="col-md-3 offset-md-3">
-                    <div class="d-flex">
-                        <img src="./assets/images/heart.svg" class="img-stat" alt="">
-                        <h1 class="figure-1">07</h1>
-                        <h6>Milion Donated</h6>
-                    </div>
+                <div class="col-lg-6 ps-0">
+                    <div class="image"></div>
                 </div>
-                <div class="col-md-3">
-                    <div class="d-flex">
-                        <img src="./assets/images/school.svg" class="img-stat" alt="">
-                        <h1 class="figure-1">07</h1>
-                        <h6>Schools Built</h6>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="d-flex">
-                        <img src="./assets/images/tap.svg" class="img-stat" alt="">
-                        <h1 class="figure-1">07</h1>
-                        <h6>Milion Liters of Clean Water</h6>
-                    </div>
+                <div class="col-lg-6">
+                    <h2>Humble Beginnings</h2>
+                    <p>The Mutib Foundation uses the Science of Benevolence to bring ever more improvement to peoples’
+                        lives. We are a new kind of foundation; open, energetic, curious and professional, operating
+                        objective, data-driven ways of delivering evermore benefit to ever more people.</p>
+                    <!-- <a href="" class="link">Read More</a> -->
                 </div>
             </div>
         </div>
     </div>
-    <div class="involved-section">
+    <div class="history-section focus col_2">
         <div class="container">
-            <h2 class="text-center">Get Involved</h2>
             <div class="row mx-0">
-                <div class="col-md-4">
-                    <div>
-                        <img src="./assets/images/puzzle.svg" class="img-fluid img-inv" alt="">
-                        <a href="" class="btnP">Contribute</a>
+                <div class="col-lg-6 ps-0">
+                    <div class="image"></div>
+                </div>
+                <div class="col-lg-6">
+                    <!-- <h6>Our Focus</h6> -->
+                    <h2>Achievement/Initiative</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur. Placerat iaculis nulla feugiat arcu dignissim. Purus
+                        cursus lacus velit in sit. Viverra sed vitae lorem quam est. Morbi interdum urna consectetur
+                        tortor adipiscing rhonc turpis enenatis.</p>
+                    <!-- <a href="" class="link">Read Our Stories</a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="history-section col_3">
+        <div class="container">
+            <div class="row mx-0">
+                <div class="col-lg-6 ps-0">
+                    <div class="image"></div>
+                </div>
+                <div class="col-lg-6">
+                    <h6>Foundery and History</h6>
+                    <h2>The legacy of
+                        Mutib Bin Abdulaziz</h2>
+                    <p>The Mutib Foundation uses the Science of Benevolence to bring ever more improvement to peoples’
+                        lives. We are a new kind of foundation; open, energetic, curious and professional, operating
+                        objective, data-driven ways of delivering evermore benefit to ever more people.</p>
+                    <a href="" class="link">Read More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="history-section focus col_4">
+        <div class="container">
+            <div class="row mx-0">
+                <div class="col-lg-6 ps-0">
+                    <div class="image"></div>
+                </div>
+                <div class="col-lg-6">
+                    <h6>Our Focus</h6>
+                    <h2>Active Programs</h2>
+                    <p>This section highlights the foundation's tangible contributions. This can include stories of
+                        initiatives in community, education and access to clean water.</p>
+                    <a href="" class="link">Read Our Stories</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="attribute-section">
+        <div class="legacy-section">
+            <div class="container">
+                <div class="row mx-0">
+                    <div class="col-md-4 ps-0">
+                        <p class="text-center me-5">Our Journey</p>
+                    </div>
+                    <div class="col-md-8">
+                        <!-- <h6>Our Journey</h6> -->
+                        <h2>Attributes & Values</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur. Placerat iaculis nulla feugiat arcu dignissim. Purus
+                            cursus lacus velit in sit. Viverra sed vitae lorem quam est. Morbi interdum urna consectetur
+                            tortor adipiscing rhonc turpis enenatis.
+                        </p>
+                        <a href="" class="link">Read More</a>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div>
-                        <img src="./assets/images/career.svg" class="img-fluid img-inv" alt="">
-                        <a href="" class="btnP">Career</a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row mx-0">
+                <div class="col-md-3">
+                    <div class="shape">
+                        <img src="./assets/images/shape1.svg" alt="">
+                        <h3>Attribute/value 1</h3>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div>
-                        <img src="./assets/images/phone.svg" class="img-fluid img-inv" alt="">
-                        <a href="" class="btnP">Connect</a>
+                <div class="col-md-3">
+                    <div class="shape">
+                        <img src="./assets/images/shape2.svg" alt="">
+                        <h3>Attribute/value 1</h3>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="shape">
+                        <img src="./assets/images/shape3.svg" alt="">
+                        <h3>Attribute/value 1</h3>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="shape">
+                        <img src="./assets/images/shape4.svg" alt="">
+                        <h3>Attribute/value 1</h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <footer>
-        <div class="container">
-            <div class="row mx-0">
+        <div class="container px-0">
+            <div class="row mx-0 foot-main">
                 <div class="col-md-8">
                     <div class="row mx-0">
                         <div class="col-md-4">
@@ -191,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 social-links">
                     <ul class="d-flex">
                         <li class="px-3"><a href=""><img src="./assets/images/linkedin.svg" alt=""></a></li>
                         <li class="px-3"><a href=""><img src="./assets/images/instagram.svg" alt=""></a></li>
