--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="navDiv">
                             <li class="nav-item">
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Team</a>
+                                <a class="nav-link" href="team.html">Team</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Focus</a>
+                                <a class="nav-link" href="focus.html">Focus</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Foundery and History</a>
+                                <a class="nav-link" href="founder.html">Foundery and History</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Careers</a>
+                                <a class="nav-link" href="career.html">Careers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
