--- a/contact.html
+++ b/contact.html
@@ -13,34 +13,39 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid px-0">
-                    <a class="navbar-brand" href="/index.html"><img src="./assets/images/header-logo.svg"
-                            alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img src="./assets/images/header-logo.svg"
+                            alt="logo" /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="navDiv">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a>
+                                <a class="nav-link" href="about.html" id="about_us"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="team.html">Team</a>
+                                <a class="nav-link" href="#" id="team">Team</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="focus.html">Focus</a>
+                                <a class="nav-link" href="#" id="focus">Focus</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="founder.html">Foundery and History</a>
+                                <a class="nav-link" href="#" id="founderandhistory">Foundery and History</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="career.html">Careers</a>
+                                <a class="nav-link" href="#" id="careers">Careers</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link" href="#" id="contact">Contact</a>
                             </li>
                         </ul>
+                        <select id="languageSelect">
+                            <option value="">Select Language</option>
+                            <option value="en">English</option>
+                            <option value="ar">Arabic</option>
+                        </select>
                     </div>
                 </div>
             </nav>
