--- a/index.html
+++ b/index.html
@@ -1,295 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/index.css" />
-    <title>Aziz</title>
-  </head>
 
-  <body class="en">
-    <header>
-      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="container-fluid px-0">
-            <a class="navbar-brand" href="index.html"
-              ><img src="./assets/images/header-logo.svg" alt="logo"
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html" id="about_us"></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/index.css" />
+  <title>Aziz</title>
+</head>
+
+<body class="en">
+  <header>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid px-0">
+          <a class="navbar-brand" href="index.html"><img src="./assets/images/header-logo.svg" alt="logo" /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html" id="about_us"></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="team.html" id="team">Team</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="focus.html" id="focus">Focus</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="founder.html" id="founderandhistory">Foundery and History</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="career.html" id="careers">Careers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html" id="contact">Contact</a>
+              </li>
+            </ul>
+            <div class="ms-5 position-relative popover-parent">
+              <div class="d-flex justify-content-lg-center align-items-center">
+                <img src="/assets/images/united-states-of-america (1).png" alt=""
+                  class="img-fluid mx-2 selected-image" />
+                <img src="/assets//images//expand_more.png" alt="" class="img-fluid arrow-icon" id="arrow-icon" />
+              </div>
+              <!-- PopOver -->
+              <div class="position-absolute bg-white rounded py-2 px-2 popover-lang" id="popover-lang">
+                <div class="d-flex justify-content-center align-items-center popover-hover px-3" value="en">
+                  <img src="/assets/images/unitedstatesmap.png" alt="" class="img-fluid me-2" />
+                  <p class="mb-0">Eng</p>
+                </div>
+                <div class="d-flex justify-content-center align-items-center popover-hover px-3" value="ar">
+                  <img src="/assets/images/artwork.png" alt="" class="img-fluid me-2" />
+                  <p class="mb-0">العربية</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </nav>
+    </div>
+  </header>
+  <div class="hero-section">
+    <div class="container position-relative">
+      <div class="hero-back row mx-0">
+        <img src="/assets/images/hero-pattern.svg" class="pattern" alt="" />
+      </div>
+      <div class="text">
+        <div class="col-md-6">
+          <h2 id="harness"></h2>
+          <a href="" class="btnP" id="learnmore"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="history-section">
+    <div class="container">
+      <div class="row mx-0">
+        <div class="col-lg-6 ps-0">
+          <div class="image"></div>
+        </div>
+        <div class="col-lg-6 pe-6">
+          <h6 id="founder">Foundery and History</h6>
+          <h2 id="legacy">The legacy of Mutib Bin Abdulaziz</h2>
+          <p id="text">
+            The Mutib Foundation uses the Science of Benevolence to bring ever
+            more improvement to peoples’ lives. We are a new kind of
+            foundation; open, energetic, curious and professional, operating
+            objective, data-driven ways of delivering evermore benefit to ever
+            more people.
+          </p>
+          <a href="" class="link" id="readmore">Read More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="history-section focus">
+    <div class="container">
+      <div class="row mx-0">
+        <div class="col-lg-6">
+          <div class="image"></div>
+        </div>
+        <div class="col-lg-6">
+          <h6 id="ourfocus">Our Focus</h6>
+          <h2 id="activeprogams">Active Programs</h2>
+          <p id="text2">
+            This section highlights the foundation's tangible contributions.
+            This can include stories of initiatives in community, education
+            and access to clean water.
+          </p>
+          <a href="" class="link" id="readstories">Read Our Stories</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="stats-section container">
+    <div class="container">
+      <div class="row mx-0">
+        <img src="./assets/images/pattern2.svg" class="img-pattern img-fluid" alt="" />
+        <div class="col-lg-3 offset-lg-3">
+          <div class="d-flex">
+            <img src="./assets/images/heart.svg" class="img-stat" alt="" />
+            <h1 class="figure-1 ruwudu-medium" id="number7">07</h1>
+            <h6 id="milliondonated">Milion Donated</h6>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="d-flex">
+            <img src="./assets/images/school.svg" class="img-stat" alt="" />
+            <h1 class="figure-1" id="number26">26</h1>
+            <h6 id="schoolsbuilt">Schools Built</h6>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="d-flex">
+            <img src="./assets/images/tap.svg" class="img-stat" alt="" />
+            <h1 class="figure-1" id="number76">76</h1>
+            <h6 id="millionwater">Milion Liters of Clean Water</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="involved-section">
+    <div class="container">
+      <h2 class="text-center" id="getinvolved">Get Involved</h2>
+      <div class="row mx-0">
+        <div class="col-md-4">
+          <div>
+            <img src="./assets/images/puzzle.svg" class="img-fluid img-inv" alt="" />
+            <a href="" class="btnP" id="contribute">Contribute</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="./assets/images/career.svg" class="img-fluid img-inv" alt="" />
+            <a href="" class="btnP" id="career">Career</a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div>
+            <img src="./assets/images/phone.svg" class="img-fluid img-inv" alt="" />
+            <a href="" class="btnP" id="connect">Connect</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="container px-0">
+      <div class="row mx-0 foot-main">
+        <div class="col-lg-8">
+          <div class="row mx-0">
+            <div class="col-lg-4">
+              <img src="./assets/images/footer-logo.svg" alt="" />
+            </div>
+            <div class="col-lg-3">
+              <ul>
+                <li>
+                  <a class="footer-link" href="" id="about_footer">About</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="team.html" id="team">Team</a>
+                <li>
+                  <a class="footer-link" href="" id="team_footer">Team</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="focus.html" id="focus">Focus</a>
+                <li>
+                  <a class="footer-link" href="" id="focus_footer">Focus</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="founder.html" id="founderandhistory"
-                    >Foundery and History</a
-                  >
+              </ul>
+            </div>
+            <div class="col-lg-3">
+              <ul>
+                <li>
+                  <a class="footer-link" href="" id="founderandhistory_footer">Founder & History</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="career.html" id="careers"
-                    >Careers</a
-                  >
+                <li>
+                  <a class="footer-link" href="" id="careers_footer">Career</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html" id="contact"
-                    >Contact</a
-                  >
+                <li>
+                  <a class="footer-link" href="" id="contact_footer">Contact</a>
                 </li>
               </ul>
             </div>
           </div>
+        </div>
+        <div class="col-lg-4 social-links">
+          <ul class="d-flex">
+            <li class="px-3">
+              <a href=""><img src="./assets/images/linkedin.svg" alt="" /></a>
+            </li>
+            <li class="px-3">
+              <a href=""><img src="./assets/images/instagram.svg" alt="" /></a>
+            </li>
+            <li class="px-3">
+              <a href=""><img src="./assets/images/facebook.svg" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="./js/index.js"></script>
+<script src="./js/translation.js"></script>
 
-          <div class="ms-5 position-relative popover-parent">
-            <div class="d-flex justify-content-center align-items-center">
-              <img
-                src="/assets/images/united-states-of-america (1).png"
-                alt=""
-                class="img-fluid mx-2 selected-image"
-              />
-              <img
-                src="/assets//images//expand_more.png"
-                alt=""
-                class="img-fluid arrow-icon"
-                id="arrow-icon"
-              />
-            </div>
-            <!-- PopOver -->
-            <div
-              class="position-absolute bg-white rounded py-2 px-2 popover-lang"
-              id="popover-lang"
-            >
-              <div
-                class="d-flex justify-content-center align-items-center popover-hover px-3"
-                value="en"
-              >
-                <img
-                  src="/assets/images/unitedstatesmap.png"
-                  alt=""
-                  class="img-fluid me-2"
-                />
-                <p class="mb-0">Eng</p>
-              </div>
-              <div
-                class="d-flex justify-content-center align-items-center popover-hover px-3"
-                value="ar"
-              >
-                <img
-                  src="/assets/images/artwork.png"
-                  alt=""
-                  class="img-fluid me-2"
-                />
-                <p class="mb-0">العربية</p>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <div class="hero-section">
-      <div class="container position-relative">
-        <div class="hero-back row mx-0">
-          <img src="/assets/images/hero-pattern.svg" class="pattern" alt="" />
-        </div>
-        <div class="text">
-          <div class="col-md-6">
-            <h2 id="harness"></h2>
-            <a href="" class="btnP" id="learnmore"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="history-section">
-      <div class="container">
-        <div class="row mx-0">
-          <div class="col-lg-6 ps-0">
-            <div class="image"></div>
-          </div>
-          <div class="col-lg-6 pe-6">
-            <h6 id="founder">Foundery and History</h6>
-            <h2 id="legacy">The legacy of Mutib Bin Abdulaziz</h2>
-            <p id="text">
-              The Mutib Foundation uses the Science of Benevolence to bring ever
-              more improvement to peoples’ lives. We are a new kind of
-              foundation; open, energetic, curious and professional, operating
-              objective, data-driven ways of delivering evermore benefit to ever
-              more people.
-            </p>
-            <a href="" class="link" id="readmore">Read More</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="history-section focus">
-      <div class="container">
-        <div class="row mx-0">
-          <div class="col-lg-6">
-            <div class="image"></div>
-          </div>
-          <div class="col-lg-6">
-            <h6 id="ourfocus">Our Focus</h6>
-            <h2 id="activeprogams">Active Programs</h2>
-            <p id="text2">
-              This section highlights the foundation's tangible contributions.
-              This can include stories of initiatives in community, education
-              and access to clean water.
-            </p>
-            <a href="" class="link" id="readstories">Read Our Stories</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="stats-section container">
-      <div class="container">
-        <div class="row mx-0">
-          <img
-            src="./assets/images/pattern2.svg"
-            class="img-pattern img-fluid"
-            alt=""
-          />
-          <div class="col-lg-3 offset-lg-3">
-            <div class="d-flex">
-              <img src="./assets/images/heart.svg" class="img-stat" alt="" />
-              <h1 class="figure-1 ruwudu-medium" id="number7">07</h1>
-              <h6 id="milliondonated">Milion Donated</h6>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="d-flex">
-              <img src="./assets/images/school.svg" class="img-stat" alt="" />
-              <h1 class="figure-1" id="number26">26</h1>
-              <h6 id="schoolsbuilt">Schools Built</h6>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="d-flex">
-              <img src="./assets/images/tap.svg" class="img-stat" alt="" />
-              <h1 class="figure-1" id="number76">76</h1>
-              <h6 id="millionwater">Milion Liters of Clean Water</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="involved-section">
-      <div class="container">
-        <h2 class="text-center" id="getinvolved">Get Involved</h2>
-        <div class="row mx-0">
-          <div class="col-md-4">
-            <div>
-              <img
-                src="./assets/images/puzzle.svg"
-                class="img-fluid img-inv"
-                alt=""
-              />
-              <a href="" class="btnP" id="contribute">Contribute</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div>
-              <img
-                src="./assets/images/career.svg"
-                class="img-fluid img-inv"
-                alt=""
-              />
-              <a href="" class="btnP" id="career">Career</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div>
-              <img
-                src="./assets/images/phone.svg"
-                class="img-fluid img-inv"
-                alt=""
-              />
-              <a href="" class="btnP" id="connect">Connect</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer>
-      <div class="container px-0">
-        <div class="row mx-0 foot-main">
-          <div class="col-md-8">
-            <div class="row mx-0">
-              <div class="col-md-4">
-                <img src="./assets/images/footer-logo.svg" alt="" />
-              </div>
-              <div class="col-md-3">
-                <ul>
-                  <li>
-                    <a class="footer-link" href="" id="about_footer">About</a>
-                  </li>
-                  <li>
-                    <a class="footer-link" href="" id="team_footer">Team</a>
-                  </li>
-                  <li>
-                    <a class="footer-link" href="" id="focus_footer">Focus</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <ul>
-                  <li>
-                    <a class="footer-link" href="" id="founderandhistory_footer"
-                      >Founder & History</a
-                    >
-                  </li>
-                  <li>
-                    <a class="footer-link" href="" id="careers_footer"
-                      >Career</a
-                    >
-                  </li>
-                  <li>
-                    <a class="footer-link" href="" id="contact_footer"
-                      >Contact</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 social-links">
-            <ul class="d-flex">
-              <li class="px-3">
-                <a href=""><img src="./assets/images/linkedin.svg" alt="" /></a>
-              </li>
-              <li class="px-3">
-                <a href=""
-                  ><img src="./assets/images/instagram.svg" alt=""
-                /></a>
-              </li>
-              <li class="px-3">
-                <a href=""><img src="./assets/images/facebook.svg" alt="" /></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/translation.js"></script>
 </html>
