--- a/about.html
+++ b/about.html
@@ -84,26 +84,27 @@
                 <a class="nav-link" href="contact.html" id="contact">Contact</a>
               </li>
             </ul>
+            <div class="ms-5 position-relative popover-parent">
+              <div class="d-flex justify-content-lg-center align-items-center">
+                <img src="/assets/images/united-states-of-america (1).png" alt=""
+                  class="img-fluid mx-2 selected-image" />
+                <img src="/assets//images//expand_more.png" alt="" class="img-fluid arrow-icon" id="arrow-icon" />
+              </div>
+              <!-- PopOver -->
+              <div class="position-absolute bg-white rounded py-2 px-2 popover-lang" id="popover-lang">
+                <div class="d-flex justify-content-center align-items-center popover-hover px-3" value="en">
+                  <img src="/assets/images/unitedstatesmap.png" alt="" class="img-fluid me-2" />
+                  <p class="mb-0">Eng</p>
+                </div>
+                <div class="d-flex justify-content-center align-items-center popover-hover px-3" value="ar">
+                  <img src="/assets/images/artwork.png" alt="" class="img-fluid me-2" />
+                  <p class="mb-0">العربية</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="ms-5 position-relative popover-parent">
-          <div class="d-flex justify-content-center align-items-center">
-            <img src="/assets/images/united-states-of-america (1).png" alt="" class="img-fluid mx-2 selected-image" />
-            <img src="/assets//images//expand_more.png" alt="" class="img-fluid arrow-icon" id="arrow-icon" />
-          </div>
-          <!-- PopOver -->
-          <div class="position-absolute bg-white rounded py-2 px-2 popover-lang" id="popover-lang">
-            <div class="d-flex justify-content-center align-items-center popover-hover px-3" value="en">
-              <img src="/assets/images/unitedstatesmap.png" alt="" class="img-fluid me-2" />
-              <p class="mb-0">Eng</p>
-            </div>
-            <div class="d-flex justify-content-center align-items-center popover-hover px-3" value="ar">
-              <img src="/assets/images/artwork.png" alt="" class="img-fluid me-2" />
-              <p class="mb-0">العربية</p>
-            </div>
-          </div>
-        </div>
       </nav>
     </div>
   </header>
@@ -121,7 +122,7 @@
     <div class="container">
       <div class="row mx-0">
         <div class="col-md-4 ps-0">
-          <p class="text-lg-center me-5" id="founderslegacy">
+          <p class="text-lg-center" id="founderslegacy">
             Founder’s Legacy
           </p>
         </div>
