arabic lorem added

--- a/about.html
+++ b/about.html
@@ -128,13 +128,13 @@
         </div>
         <div class="col-md-8 ps-0">
           <h2 id="legacy">The legacy of Mutib Bin Abdulaziz</h2>
-          <p>
+          <p id="loremIpsum">
             Lorem ipsum dolor sit amet consectetur. Placerat iaculis nulla
             feugiat arcu dignissim. Purus cursus lacus velit in sit. Viverra
             sed vitae lorem quam est. Morbi interdum urna consectetur tortor
             adipiscing rhoncus augue turpis venenatis.
           </p>
-          <p>
+          <p id="loremIpsum1">
             Massa lectus sodales aenean pellentesque. Tristique gravida
             vestibulum leo augue. Consectetur ornare placerat lectus et
             feugiat adipiscing nam tempor. Id elementum nec neque vitae lorem
@@ -142,7 +142,7 @@
             condimentum odio. Nibh eget ultricies id est. Lacus in diam vitae
             amet. Tellus placerat rhoncus magnis massa id eu.
           </p>
-          <p>
+          <p id="loremIpsum2">
             Morbi porttitor congue nisl lacinia egestas. Vestibulum
             scelerisque sagittis vitae varius enim senectus. Ipsum molestie eu
             dui porttitor faucibus in turpis. Quis non orci odio quis leo.
@@ -216,7 +216,7 @@
         <div class="col-lg-6 pe-6">
           <!-- <h6>Our Focus</h6> -->
           <h2 id="achievement">Achievement/Initiative</h2>
-          <p>
+          <p id="loremIpsum3">
             Lorem ipsum dolor sit amet consectetur. Placerat iaculis nulla
             feugiat arcu dignissim. Purus cursus lacus velit in sit. Viverra
             sed vitae lorem quam est. Morbi interdum urna consectetur tortor
@@ -277,7 +277,7 @@
           <div class="col-md-8">
             <!-- <h6>Our Journey</h6> -->
             <h2 id="attributeandvalues">Attributes & Values</h2>
-            <p>
+            <p id="loremIpsum4">
               Lorem ipsum dolor sit amet consectetur. Placerat iaculis nulla
               feugiat arcu dignissim. Purus cursus lacus velit in sit. Viverra
               sed vitae lorem quam est. Morbi interdum urna consectetur tortor
